--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Bank Service Application</name>
   <description>Java 8 Spring Boot 2.6 Bank Microservice</description>
+  <properties>
+    <java.version>1.8</java.version>
+  </properties>
   <dependencies>
 
     <dependency>
@@ -38,6 +41,31 @@
         <artifactId>spring-boot-starter-test</artifactId>
         <scope>test</scope>
     </dependency>
-
+	<dependency>
+	    <groupId>org.projectlombok</groupId>
+	    <artifactId>lombok</artifactId>
+	    <scope>provided</scope>
+	</dependency>
   </dependencies>
+  <build>
+	<plugins>
+		<plugin>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<configuration>
+				<annotationProcessorPaths>
+					<path>
+						<groupId>org.projectlombok</groupId>
+						<artifactId>lombok</artifactId>
+						<version>1.18.42</version>
+					</path>
+				</annotationProcessorPaths>
+			</configuration>
+		</plugin>
+	</plugins>
+</build>
 </project>
